@@ -1,3 +1,13 @@
+2003-09-16  Chris Garry  <cgarry@sweeneydesign.co.uk>
+
+    * doc/vnc-server.html:
+    * src/vnc-server.c:
+    * include/vnc-server.h:
+    Added new function VncCopyBuffer2RectMask().
+
+    * tests/vnc-test.c:
+    Modifed to include a cursor.
+
 2003-09-02  Chris Garry  <cgarry@sweeneydesign.co.uk>
 
     * tests/vnc-test.c:
